--- a/app/src/style.css
+++ b/app/src/style.css
@@ -48,7 +48,7 @@ button {
 .form-group {
   background-color:#0097A7;
   color:black;
-  width:50%;
+  width:70%;
   padding:30px;
   border-radius: 4px;
   background-color: #f8f8f8;
@@ -63,4 +63,51 @@ button {
 
 .horizontal-rule {
   background-color:#BDBDBD;
+}
+
+/* Style the tab */
+* {box-sizing: border-box}
+
+.tab {
+  float: left;
+  border: 0px solid #ccc;
+  background-color: #f1f1f1;
+  width: 25%;
+  height: 300px;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  display: block;
+  background-color: inherit;
+  color: black;
+  padding: 22px 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 17px;
+  color: black
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  float: left;
+  padding: 0px 12px;
+  border: 0px solid #ccc;
+  width: 70%;
+  border-left: none;
+  height: 300px;
 }
